# payload-board

./: .gitignore  CHANGELOG.md  README.md  components.json  package-lock.json  package.json  payload-board-plan.md  vite.config.ts
.github/workflows/: release.yml
docs/: backlog.md  index.md
docs/done/: background-art.md  platform-adapters.md  process-control.md  profiles.md  sequencer.md  settings.md
docs/planned/: app-launch-config.md  export-import.md  hotkeys.md  monitoring.md  platform-adapters.md  process-control.md  profiles.md  sequencer.md  session-logs.md  tray-autostart.md  ui-redesign.md
src/: App.tsx  globals.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  process_manager.rs  store.rs
src-tauri/src/commands/: apps.rs  mod.rs  processes.rs  profiles.rs  settings.rs  steamgriddb.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: DesignReference.tsx
src/components/dashboard/: AppListRow.tsx  AppTile.tsx  StatusBar.tsx
src/components/editor/: AppEntryEditor.tsx  InstalledAppsPicker.tsx  ProfileEditor.tsx  SteamGridPicker.tsx
src/components/icons/: Icon.tsx  index.ts
src/components/settings/: SettingsPanel.tsx
src/components/sidebar/: ProfileList.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/hooks/: useProcessStatus.ts  useProfiles.ts
src/ipc/: processes.ts  profiles.ts  settings.ts  steamgriddb.ts
